byteBuffer commit